# game-sense

./: .gitignore  CodeOfConduct.md  README.md  deploy.sh  docker-compose.yml  makeDocumentation.md  makefile  package-lock.json
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug-report.md  feature_request.md  📋-task-distribution-summary.md
.github/workflows/: deploy.yml
club_service/: pom.xml
docs/: PULL_REQUEST_TEMPLATE.md
minutes/: meeting3_15_10.md  meeting5_29_10.md  meeting6_01_11.md  meeting7_05_11.md  meeting8_13_11.md  reuniao1.md  reuniao2.md  reuniao4.md  reuniao5.md  template.md
mobile-prototypes/: README.md
reports/: docs_link.txt
src/: .env  docker-compose.yml  makefile
src/backend/club_service/: .dockerignore  Dockerfile  pom.xml
src/backend/game_service/: Dockerfile  pom.xml
src/backend/gamesense_db/: DDL.sql  TRUNCATE.sql
src/backend/league_service/: Dockerfile  pom.xml
src/backend/live_game_service/: Dockerfile  pom.xml
src/club_service/: Dockerfile  pom.xml
src/game_generator/: .dockerignore  Dockerfile  LeagueScheduler.py  consumer_test.py  event_generator.py  game_generator.py  game_producer.py  game_serializator.py  models.py  pyproject.toml
src/game_generator/games/: match_SCP_vs_SLB_20241201_193951.json  match_SCP_vs_SLB_20241202_213705.json  match_SCP_vs_SLB_20241202_234819.json  match_SCP_vs_SLB_20241212_120256.json  match_SCP_vs_SLB_20241212_215821.json
src/league_service/: pom.xml
src/live_game_service/: Dockerfile  pom.xml
src/management_service/: pom.xml
src/player_service/: Dockerfile  pom.xml
(+263 files in other folders)
